# mc-particle-physics

./: README.md  ToDo.md  pyproject.toml  requirements.txt  requirements3_10.txt  requirements3_8.txt  requirements3_9.txt  requirements_implict.txt
data/: ex1_all_mc_errors.csv  ex1_part_b.csv  ex1_part_d.csv  ex2e-analysis_100_000.yoda  ex2e-analysis_10_000.yoda  ex2e-analysis_1_000.yoda  ex2e-analysis_1_000_000.yoda  sherpa.yoda
exercise1/: all_cross_sections.py  all_mc_errors.py  partB.py  partD.py  partE.py  part_b.py  part_d.py  part_e.py
exercise2/: partA.py  partC.py  partE.py
exercises/: exercise1b.py  exercise1d.py  exercise2a.py  exercise2b.py  exercise2c.py  exercise2e.py
extras/: exact_values.py  integrand_plot.py
report/: constants.tex  exercise1.tex  exercise2.tex  main.tex  vegas_grids.tex
simulator/: pyproject.toml
simulator/src/simulator/integrator/: distributions.py  integrator.py  particles.py
simulator/src/simulator/plotting/: __init__.py  colors.py  fontsize.py  grid.py
simulator/src/simulator/utils/: __init__.py  alphas.py  histogram.py  particle.py  qcd_group_constants.py  vector.py
src/simulator/: __init__.py  constants.py  get_distros.py
src/simulator/integrator/: __init__.py  distributions.py  integrator.py  particles.py  squared_matrix_element.py
src/simulator/plotting/: __init__.py  colors.py  fontsize.py  grid.py  histogram.py  jets.py  mc_error.py
src/simulator/utils/: __init__.py  alphas.py  analysis.py  histogram.py  new_yoda.py  shower.py  yoda.py
