[project]
name = "simulator"
version = "0.0.1"
authors = [
  { name="Victor Granados", email="victorgranadosp@gmail.com" },
]
description = "Monte Carlo integrator for the simulation of the electron-positron to quark-antiquark process."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/VictorG20/mc-particle-physics.git"