[project]
name = "simulator"
version = "0.0.1"
authors = [
  { name="Victor Granados", email="victorgranadosp@gmail.com" },
]
description = "Monte Carlo simulator for the electron-positron to quark-antiquark process."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "numpy<2.0",
    "pandas",
    "tqdm",
    "vegas"]

[project.urls]
Homepage = "https://github.com/VictorG20/mc-particle-physics"
Issues = "https://github.com/VictorG20/mc-particle-physics/issues"